objects/HoursLeads__c.object
<CustomObject>
    <description>Tracking RCA and CwD hours</description>
    <fields>
        <fullName>Date_hoursleads_submitted__c</fullName>
        <description>Date hours information submitted to TCN</description>
        <inlineHelpText>Date hours information submitted to TCN</inlineHelpText>
        <label>Date hoursleads submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outstanding_hours_including_these__c</fullName>
        <formula>Young_person__r.Hours_summary_Sept_2011__c   -  Volunteer_hoursleads__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding hours (including these)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VolunteerL_organisation__c</fullName>
        <description>Name of volunteer organisation, as entered by YP</description>
        <inlineHelpText>Name of volunteer organisation, as entered by YP</inlineHelpText>
        <label>VolunteerL organisation (entered by YP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_hoursleads__c</fullName>
        <description>Number of hours volunteered</description>
        <inlineHelpText>Number of hours volunteered</inlineHelpText>
        <label>Volunteer hoursleads</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteering_contact_email_address__c</fullName>
        <label>Volunteering contact email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Volunteering_contact_name__c</fullName>
        <label>Volunteering contact name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteering_contact_phone_number__c</fullName>
        <label>Volunteering contact phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Volunteeringleads_description__c</fullName>
        <label>Volunteeringleads description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Young_person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Young person</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>HoursLeads</relationshipLabel>
        <relationshipName>HoursLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>HoursLeads</label>
    <nameField>
        <label>Hours Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HoursLeads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>